--- a/config.env
+++ b/config.env
@@ -1,4 +1,3 @@
 NODE_ENV=development
 PORT=3000
-USERNAME=julien
-PASSWORD=password
+DATABASE_URL="mongodb://devuser:devpass@localhost:27017/nodecourse"
