--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,20 +2,29 @@ version: '3.1'
 
 services:
   mongo:
-    image: mongo
-    restart: always
+    image: mongo:latest
+    restart: on-failure
     container_name: nodecourse_mongo
     environment:
       MONGO_INITDB_ROOT_USERNAME: root
-      MONGO_INITDB_ROOT_PASSWORD: example
+      MONGO_INITDB_ROOT_PASSWORD: password
+      MONGO_NON_ROOT_USERNAME: user
+      MONGO_NON_ROOT_PASSWORD: pass
+      MONGO_INITDB_DATABASE: nodecourse
+    ports:
+      - 27017:27017
     volumes:
+      - ./mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro
       - ./data/db:/data/db
+    command: [--auth]
 
   mongo-express:
     image: mongo-express
-    restart: always
+    restart: on-failure
     ports:
       - 8081:8081
     environment:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
-      ME_CONFIG_MONGODB_ADMINPASSWORD: example
+      ME_CONFIG_MONGODB_ADMINPASSWORD: password
+    depends_on:
+      - mongo
